cdk.out/NetworkStack-prd.template.json
{
 "Resources": {
  "VpcC3027511": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.30.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "prd-django-vpc-and"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/Resource"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.30.0.0/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-public-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/Subnet"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1RouteTable1F2CCCE6": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/RouteTable"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1RouteTableAssociation97915BE5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet1RouteTable1F2CCCE6"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1DefaultRoute93220878": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet1RouteTable1F2CCCE6"
    }
   },
   "DependsOn": [
    "VpcVPCGW42EC8516"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/DefaultRoute"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1EIP3CE5CDD4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/EIP"
   }
  },
  "VpcprddjangosubnetpublicandSubnet1NATGateway0F3EF731": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcprddjangosubnetpublicandSubnet1EIP3CE5CDD4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3"
    },
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "DependsOn": [
    "VpcprddjangosubnetpublicandSubnet1DefaultRoute93220878",
    "VpcprddjangosubnetpublicandSubnet1RouteTableAssociation97915BE5"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet1/NATGateway"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2Subnet2B105CD5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.30.0.64/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-public-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/Subnet"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2RouteTable7BE65596": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/RouteTable"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2RouteTableAssociation678B7EC2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet2RouteTable7BE65596"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet2Subnet2B105CD5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2DefaultRouteE53329DB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet2RouteTable7BE65596"
    }
   },
   "DependsOn": [
    "VpcVPCGW42EC8516"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/DefaultRoute"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2EIP52AB55AD": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/EIP"
   }
  },
  "VpcprddjangosubnetpublicandSubnet2NATGateway02D602A0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcprddjangosubnetpublicandSubnet2EIP52AB55AD",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet2Subnet2B105CD5"
    },
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "DependsOn": [
    "VpcprddjangosubnetpublicandSubnet2DefaultRouteE53329DB",
    "VpcprddjangosubnetpublicandSubnet2RouteTableAssociation678B7EC2"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet2/NATGateway"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3Subnet27B41D3F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.30.0.128/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-public-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/Subnet"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3RouteTable712A8CDD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/RouteTable"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3RouteTableAssociationC2A60E36": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet3RouteTable712A8CDD"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet3Subnet27B41D3F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3DefaultRoute84CD3943": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet3RouteTable712A8CDD"
    }
   },
   "DependsOn": [
    "VpcVPCGW42EC8516"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/DefaultRoute"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3EIP13BB978D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/EIP"
   }
  },
  "VpcprddjangosubnetpublicandSubnet3NATGatewayAAF43822": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpcprddjangosubnetpublicandSubnet3EIP13BB978D",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet3Subnet27B41D3F"
    },
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "DependsOn": [
    "VpcprddjangosubnetpublicandSubnet3DefaultRoute84CD3943",
    "VpcprddjangosubnetpublicandSubnet3RouteTableAssociationC2A60E36"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-public-andSubnet3/NATGateway"
   }
  },
  "VpcprddjangosubnetprivateandSubnet1Subnet78D633E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.30.4.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-private-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1/Subnet"
   }
  },
  "VpcprddjangosubnetprivateandSubnet1RouteTable5FDFEB28": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1/RouteTable"
   }
  },
  "VpcprddjangosubnetprivateandSubnet1RouteTableAssociationD2F0FFE1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet1RouteTable5FDFEB28"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet1Subnet78D633E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetprivateandSubnet1DefaultRouteEC9AA301": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet1NATGateway0F3EF731"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet1RouteTable5FDFEB28"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet1/DefaultRoute"
   }
  },
  "VpcprddjangosubnetprivateandSubnet2Subnet86862908": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.30.8.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-private-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2/Subnet"
   }
  },
  "VpcprddjangosubnetprivateandSubnet2RouteTable5AC72344": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2/RouteTable"
   }
  },
  "VpcprddjangosubnetprivateandSubnet2RouteTableAssociationAA27DBE3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet2RouteTable5AC72344"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet2Subnet86862908"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetprivateandSubnet2DefaultRouteB4FED410": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet2NATGateway02D602A0"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet2RouteTable5AC72344"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet2/DefaultRoute"
   }
  },
  "VpcprddjangosubnetprivateandSubnet3SubnetE7CC1078": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.30.12.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "prd-django-subnet-private-and"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3/Subnet"
   }
  },
  "VpcprddjangosubnetprivateandSubnet3RouteTable410A9CB8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3/RouteTable"
   }
  },
  "VpcprddjangosubnetprivateandSubnet3RouteTableAssociation31D2C1BF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet3RouteTable410A9CB8"
    },
    "SubnetId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet3SubnetE7CC1078"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3/RouteTableAssociation"
   }
  },
  "VpcprddjangosubnetprivateandSubnet3DefaultRoute41B116E4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpcprddjangosubnetpublicandSubnet3NATGatewayAAF43822"
    },
    "RouteTableId": {
     "Ref": "VpcprddjangosubnetprivateandSubnet3RouteTable410A9CB8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/prd-django-subnet-private-andSubnet3/DefaultRoute"
   }
  },
  "VpcIGW488B0FEB": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "secret"
     },
     {
      "Key": "Environment",
      "Value": "prd"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "prd-django-vpc-and"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/IGW"
   }
  },
  "VpcVPCGW42EC8516": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/Vpc/Vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOzQqDMBCEn8V7TFXw0KNIKV5a0eK1rHFL408iZqMU8d2LtehpZj6GYQLuhwH3HJiMK6rGbWXJ55xANAwm80QR8LnoBYtfqkhjltqylSK3pUJa2eEybQkfULZ48INFxmghgaRWe3k1lyRd5QZ0BcIJPiwd5AiEx3CiCAeFe2F78k8REYh3h4oWlqHRdhC/3bul3m6//nRhSlfIa3MaA4/7Zx46tZHSHawi2SHPNv0Cf451/BABAAA="
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-prd/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "NatInstanceNatInstanceSkipped7FE712D8": {
   "Value": "NAT instance disabled"
  },
  "ExportsOutputRefVpcprddjangosubnetprivateandSubnet1Subnet78D633E84B19C4D2": {
   "Value": {
    "Ref": "VpcprddjangosubnetprivateandSubnet1Subnet78D633E8"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetprivateandSubnet1Subnet78D633E84B19C4D2"
   }
  },
  "ExportsOutputRefVpcprddjangosubnetprivateandSubnet2Subnet8686290868E2C3CB": {
   "Value": {
    "Ref": "VpcprddjangosubnetprivateandSubnet2Subnet86862908"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetprivateandSubnet2Subnet8686290868E2C3CB"
   }
  },
  "ExportsOutputRefVpcprddjangosubnetprivateandSubnet3SubnetE7CC1078431BA0A9": {
   "Value": {
    "Ref": "VpcprddjangosubnetprivateandSubnet3SubnetE7CC1078"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetprivateandSubnet3SubnetE7CC1078431BA0A9"
   }
  },
  "ExportsOutputRefVpcC302751171D26A23": {
   "Value": {
    "Ref": "VpcC3027511"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcC302751171D26A23"
   }
  },
  "ExportsOutputRefVpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3416D2249": {
   "Value": {
    "Ref": "VpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetpublicandSubnet1Subnet1EB09AE3416D2249"
   }
  },
  "ExportsOutputRefVpcprddjangosubnetpublicandSubnet2Subnet2B105CD558FF3D3F": {
   "Value": {
    "Ref": "VpcprddjangosubnetpublicandSubnet2Subnet2B105CD5"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetpublicandSubnet2Subnet2B105CD558FF3D3F"
   }
  },
  "ExportsOutputRefVpcprddjangosubnetpublicandSubnet3Subnet27B41D3FC800C972": {
   "Value": {
    "Ref": "VpcprddjangosubnetpublicandSubnet3Subnet27B41D3F"
   },
   "Export": {
    "Name": "NetworkStack-prd:ExportsOutputRefVpcprddjangosubnetpublicandSubnet3Subnet27B41D3FC800C972"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
